conditions.Conditions.scala.error
Erreur de compilation :
Conditions:1: error: '(' expected but identifier found.
if estFaceMur(0,4) {
   ^Conditions:4: error: '(' expected but identifier found.
if !estFaceMur(){
   ^Conditions:8: error: illegal start of simple expression
	}
        ^