conditions.Conditions.scala.code
if estFaceMur(0,4) {
  recule()
}
if !estFaceMur(){
  avance()
}